# MatrAIx-fork

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Contribution.md  Environment.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: pytest.yml  ruff-format.yml
application/: QUICKSTART.md  README.md  choosing-an-agent.md  large-scale-run.md  task-guide.md  web-interaction.md
application/persona_eval/: .env.local.example  DEMO_VIDEO_SCRIPT.md  DEMO_WALKTHROUGH_ZH.md  README.md  RECAI_ENV_NOTES.md  REST_API.md  UNIFIED_RUNTIME.md  pytest.ini  run_demo.sh
application/persona_eval/backend/: requirements.txt  run_dev.sh  run_real.sh
application/playground/: .env.local.example  README.md  REST_API.md
application/playground/litellm/: README.md  (+2 more)
application/reporting/: README.md  __init__.py  aggregator.py
application/scripts/: README.md  generate_application_job.py
application/task-spec/: README.md  authoring-bundle.md  reporting-and-evaluation.md
application/tasks/: README.md
applications/: PLAN.md
configs/jobs/: README.md  persona-chat-local.yaml  persona-computer-use-ios-local.yaml  persona-computer-use-linux-local.yaml  persona-computer-use-macos-local.yaml  persona-debug-local.yaml  persona-survey-local.yaml  persona-web-browser-use-local.yaml  persona-web-cocoa-local.yaml  persona-web-linux-cua-local.yaml  persona-web-playwright-local.yaml
docs/: README.md  contributing.md
docs/applications/: PLAN.md  README.md  getting-started.md  task-guide.md  web-interaction.md
docs/environments/: PLAN.md  README.md  choosing-an-agent.md
docs/personas/: PLAN.md  getting-started.md
environment/: README.md  __init__.py
environment/adapters/: README.md  manifest.schema.json
environment/docker-snippets/: README.md
environment/integrations/: __init__.py
environments/: PLAN.md
jobs/persona-chat-local/: config.json  lock.json  result.json
jobs/persona-computer-use-ios-local/: config.json  lock.json  result.json
jobs/persona-computer-use-linux-local/: config.json  lock.json  result.json
jobs/persona-computer-use-macos-local/: config.json  lock.json  result.json
jobs/persona-survey-local/: config.json  lock.json  result.json
jobs/persona-web-browser-use-local/: config.json  lock.json  result.json
jobs/persona-web-cocoa-local/: config.json  lock.json  result.json
jobs/persona-web-linux-cua-local/: config.json  lock.json  result.json
jobs/persona-web-playwright-local/: config.json  lock.json  result.json
persona/: README.md  dimensions.json
persona/attribute_pool/: README.md
persona/datasets/: README.md
persona/examples/: persona_0042.yaml
persona/human_extraction/: AMAZON_EXTRACTION_HANDOFF.md  README.md
persona/reporting/: README.md  __init__.py  eval_grounding_job.py
persona/schema/: README.md  dimension_categories.json  dimensions.json  generate_persona_taxonomy_mapping.ps1  persona_taxonomy.json  persona_taxonomy_mapping.csv  render_persona_schema_taxonomy.py
persona/scripts/: README.md  augment_dev_personas_food_dims.py  generate_dev_personas.py  generate_persona_job.py
persona/sources/: README.md
persona/synthesis/: README.md  __init__.py
persona/tasks/: README.md
persona/validators/: schema_validator.py
personas/: PLAN.md  dimensions.json  proposal_autopersona.md
personas/StatusUpdate/: Shirley-Huang.md
scripts/: sync_docker_snippets.py
skills/create-matraix-task/: SKILL.md
src/matraix/: __init__.py  application_job.py  persona_consistency.py  persona_dimension_catalog.py  persona_display_name.py  persona_generator.py  persona_grounding.py  persona_job.py  task_catalog.py  web_task_environment.py
src/personabench/: application_job.py  persona_generator.py  persona_job.py  task_catalog.py
tasks/: README.md
tests/environment/: test_application_task_contracts.py  test_application_tasks.py  test_harbor_runtime_foundation.py  test_job_recipes.py  test_optional_packages.py  test_persona_agents.py  test_persona_strategy_gate.py
tests/integration/: test_matraix_harbor_smoke.py
tests/playground_core/: test_persona_display_name.py
tests/unit/: test_web_task_environment.py
(+3315 files in other folders)
