[project]
name = "matraix"
version = "0.1.0"
description = "MatrAIx – persona-conditioned agent evaluation: task catalogs, Harbor runtime, and the Playground interactive harness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.17",
    "datasets>=4.4.1",
    "dirhash>=0.5.0",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "litellm>=1.83.14",
    "packaging>=25.0",
    "pathspec>=1.0.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "ruff>=0.13.0",
    "shortuuid>=1.0.13",
    "supabase>=2.28.2",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
    "typer>=0.16.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
harbor = "harbor.cli.main:app"
hr = "harbor.cli.main:app"
hb = "harbor.cli.main:app"

[project.optional-dependencies]
amazon-modal = [
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "modal>=1.4.0",
    "pyarrow>=22.0.0",
    "tqdm>=4.66.0",
]
cloud = [
    "matraix[cwsandbox]",
    "matraix[daytona]",
    "matraix[e2b]",
    "matraix[gke]",
    "matraix[islo]",
    "matraix[langsmith]",
    "matraix[modal]",
    "matraix[novita]",
    "matraix[runloop]",
    "matraix[tensorlake]",
    "matraix[use-computer]",
    "matraix[wandb]",
]
computer-1 = [
    "anthropic[bedrock]>=0.102.0",
    "google-genai>=2.3.0",
    "openai>=2.0",
]
cwsandbox = ["cwsandbox>=0.23.3"]
daytona = ["daytona>=0.184.0"]
e2b = ["dockerfile-parse>=2.0.1", "e2b>=2.25.0"]
gke = ["kubernetes>=32.0.0"]
islo = ["dockerfile-parse>=2.0.1", "islo>=0.3.3"]
langsmith = ["langsmith[sandbox]>=0.8.8"]
modal = ["modal>=1.4.0"]
novita = ["dockerfile-parse>=2.0.1", "novita-sandbox>=2.0.0a3"]
runloop = ["dockerfile-parse>=2.0.1", "runloop-api-client>=1.23.2"]
tensorlake = ["tensorlake>=0.5.18"]
tinker = ["tinker>=0.14.0", "tinker-cookbook>=0.1.0"]
use-computer = ["use-computer[harbor,agents]>=0.0.44"]
wandb = ["cwsandbox>=0.23.3", "wandb>=0.27"]
all = ["matraix[cloud]", "matraix[computer-1]", "matraix[tinker]"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "harbor",
    "harbor.agents",
    "harbor.agents.computer_1",
    "harbor.agents.computer_1.providers",
    "harbor.agents.installed",
    "harbor.agents.installed.cline",
    "harbor.agents.terminus_2",
    "harbor.analyze",
    "harbor.analyze.prompts",
    "harbor.auth",
    "harbor.cli",
    "harbor.cli.admin",
    "harbor.cli.annotator",
    "harbor.cli.debug_checker",
    "harbor.cli.plugins",
    "harbor.cli.quality_checker",
    "harbor.db",
    "harbor.download",
    "harbor.environments",
    "harbor.environments.daytona",
    "harbor.environments.docker",
    "harbor.environments.singularity",
    "harbor.leaderboard",
    "harbor.llms",
    "harbor.mappers",
    "harbor.metrics",
    "harbor.models",
    "harbor.models.agent",
    "harbor.models.dataset",
    "harbor.models.job",
    "harbor.models.metric",
    "harbor.models.package",
    "harbor.models.task",
    "harbor.models.trajectories",
    "harbor.models.trial",
    "harbor.models.verifier",
    "harbor.publisher",
    "harbor.registry",
    "harbor.registry.client",
    "harbor.registry.client.harbor",
    "harbor.storage",
    "harbor.tasks",
    "harbor.trial",
    "harbor.upload",
    "harbor.utils",
    "harbor.verifier",
    "harbor.viewer",
    "matraix",
    "matraix.agents",
    "matraix.agents.installed",
    "matraix.agents.persona",
]

[tool.setuptools.package-dir]
harbor = "environment/runtime/harbor"
matraix = "src/matraix"
"matraix.agents" = "environment/agents/matraix/agents"

[tool.setuptools.package-data]
harbor = [
    "**/.gitignore",
    "**/Dockerfile",
    "**/*.json",
    "**/*.md",
    "**/*.sh",
    "**/*.toml",
    "**/*.tmpl",
    "**/*.txt",
    "**/*.yaml",
]
matraix = [
    "agents/persona/templates/*.j2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "asyncio: marks tests as async tests",
    "unit: marks tests as unit tests",
]
